# DeepVox

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  task.md
.github/workflows/: ci.yml
docs/: 01_vision_ecosysteme.md  02_matrice_taches_et_architectures.md  03_feuille_de_route.md  04_protocole_experimental_phase1.md  05_sources_donnees.md  06_etat_de_lart.md  07_risques_et_questions_ouvertes.md  08_retour_experience_phase1_run1.md  09_retour_experience_phase1_run2.md  10_retour_experience_phase1_run3_conditionB.md  11_retour_experience_phase1_run4.md  12_retour_experience_phase2_run1.md  13_retour_experience_phase2_run2.md  14_retour_experience_phase2_run3.md  15_retour_experience_phase2_run4.md  README.md
notebooks/: 01_exploration_pipeline.ipynb  02_phase2_asr_kaggle.ipynb
paper/: article_fr.md
scripts/: ablation_codec2_fields.py  evaluate_checkpoint.py  evaluate_with_kenlm.py  noise_robustness.py  phase1_phoneme_classification.py  phase2_asr.py  prepare_data.py  preprocess_for_kaggle.py  run_all_conditions.py
src/deepvox/: __init__.py
src/deepvox/codec2/: encoder.py
src/deepvox/data/: ctc_dataset.py  dataset.py  preprocess.py  text.py
src/deepvox/eval/: metrics.py  wer.py
src/deepvox/models/: ctc_asr.py  phoneme_classifier.py
src/deepvox/training/: phase1.py  phase2_asr.py
tests/: test_codec2_encoder.py  test_metrics.py  test_model.py  test_text.py  test_wer.py
